# epic7-2026-summer-helper

./: .gitignore  README.md  VALIDATION.md  build-release.bat  index.html  package-lock.json  package.json  run-dev.bat  vite.config.ts  先看这里.txt
.github/workflows/: windows-build.yml
scripts/: build.ps1  dev.ps1  download-maa-runtime.ps1  validate.ps1
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build-release.bat  tauri.conf.json
src-tauri/resources/config/: lucky_sprint_settings.default.json  recognition_config.json
src-tauri/src/: commands.rs  config.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/controller/: adb.rs  maa.rs  mod.rs
src-tauri/src/game/: core.rs  mod.rs  model.rs  runner.rs  strategy.rs
src-tauri/src/recognition/: matcher.rs  mod.rs
src/components/: LogPanel.tsx  StatusCards.tsx
