[package]
name = "epic7-summer-helper"
version = "1.0.0"
description = "2026 夏活辅助，Tauri + Rust + MaaFramework"
authors = ["Epic7bphelp"]
edition = "2021"

[lib]
name = "epic7_summer_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "epic7-summer-helper"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
parking_lot = "0.12"
walkdir = "2"
which = "7"
maa-framework = { version = "1.19.0", default-features = false, features = ["adb", "toolkit", "dynamic", "image"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_LibraryLoader"] }
